n1: Add/update Qualcomm init scripts

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -37,6 +37,9 @@ service ril-qmi /system/bin/sh /init.qcom.ril.sh
     user root
     oneshot
 
+#on init
+#    export BOOTCLASSPATH ${BOOTCLASSPATH}:/system/framework/security-bridge.jar:/system/framework/oem-services.jar
+
 on fs
     mount_all fstab.qcom
 
@@ -72,6 +75,12 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
         class late_start
         user camera
         group camera system inet input graphics net_bt_stack
+
+#start GNSS/Sensor interface daemon
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group gps qcom_oncrpc net_raw
 
 service thermald /system/bin/thermald
    class main
@@ -112,6 +121,7 @@ service kickstart /system/bin/qcks -i /firmware/image/
 service mdm_helper /system/bin/mdm_helper
     class main
     onrestart setprop ro.service.mdm_helper_restarted "true"
+    group system
     disabled
 
 service qrngd /system/bin/qrngd -f
@@ -181,3 +191,37 @@ service time_daemon /system/bin/time_daemon
    class late_start
    user root
    group root
+
+service imsqmidaemon /system/bin/imsqmidaemon
+    class main
+    user system
+    group radio net_raw log qcom_diag
+    disabled
+
+on boot
+    start imsqmidaemon
+
+# imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
+service imsdatadaemon /system/bin/imsdatadaemon
+    class main
+    user root
+    group system wifi radio net_raw log qcom_diag net_admin
+    disabled
+
+service wcnss-service /system/bin/wcnss_service
+    class late_start
+    user system
+    group system wifi
+    oneshot
+
+on property:sys.ims.QMI_DAEMON_STATUS=1
+    start imsdatadaemon
+
+service ims_rtp_daemon /system/bin/ims_rtp_daemon
+   class main
+   user system
+   group radio net_raw diag qcom_diag log
+   disabled
+
+on property:sys.ims.DATA_DAEMON_STATUS=1
+    start ims_rtp_daemon
