--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -612,8 +612,10 @@ service hcidump /system/bin/sh /system/etc/hcidump.sh
     disabled
     oneshot
 
-service charger /charger
-    class charger
+service charger /system/bin/quickboot
+    class core
+    user root
+    oneshot
 
 service ssr_diag /system/bin/ssr_diag
     class late_start
