Revert "n1: Use Oppo charger binary"
This reverts commit feabbc8d16b22bcaa39cc001ac8e99131fcaa33b.

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -612,10 +612,8 @@ service hcidump /system/bin/sh /system/etc/hcidump.sh
     disabled
     oneshot
 
-service charger /system/bin/quickboot
-    class core
-    user root
-    oneshot
+service charger /charger
+    class charger
 
 service ssr_diag /system/bin/ssr_diag
     class late_start
