--- a/rootdir/etc/init.qcom.usb.rc
+++ b/rootdir/etc/init.qcom.usb.rc
@@ -25,7 +25,14 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 on init
+    write /sys/class/android_usb/android0/f_rndis/manufacturer Oppo
+    write /sys/class/android_usb/android0/f_rndis/vendorID 22d9
     write /sys/class/android_usb/android0/f_rndis/wceis 1
+
+on boot
+    write /sys/class/android_usb/android0/iSerial $ro.serialno
+    write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
+    write /sys/class/android_usb/android0/iProduct $ro.product.model
 
 service qcom-usb-sh /system/bin/sh /init.qcom.usb.sh
     class core
