--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -167,3 +167,9 @@ on property:persist.sys.touchpanel.enable=false
     write /proc/touchpanel/flashlight_enable 0
     write /proc/touchpanel/glove_mode_enable 0
     write /proc/touchpanel/music_enable 0
+
+on property:persist.sys.gesturesensor.enable=true
+    write /proc/touchpad/enable 1
+
+on property:persist.sys.gesturesensor.enable=false
+    write /proc/touchpad/enable 0
