n1: Upstream GPS bugfixes
    Correction in checksum calculation for NMEA

    The number of bytes to be written for
    the checksum exceeded the buffer length.
    This change corrects makes the correction.

    Change-Id: If90c6f5b2006a013a096a767334deac1555553f1
    CRs-fixed: 468553

    GPS HAL: expose altitude and speed uncertainty

    Expose altitude and speed uncertainty from GPS fix via extended
    info.

    Change-Id: I0a478aa25d4b0a98793c946ba5fb883520a4ce58

    Cache data availability before gps is enabled

    This is so that data disable is not
    sent to the modem by default if data
    is enabled

    Change-Id: I383443fc0321380c22382ba7d7f85dacf948853a
    CRs-fixed: 460376

    Make Loc Init Asynchronous

    GPS-enable gets too heavy at powerup, when loc_init is
    synchronous, where loc goes to get the hardware handle
    if AP init happens faster than the GPS hardware. The
    loc init calling thread is from Android framework, and
    it locks a mutex that in turn could lock up system server
    main thread upon race conditions.

    The second half of loc init, i.e. the reinit, is now moved
    to loc worker thread. This should help release some of the
    powerup timing pressure on the framework threads.

    Added a message just for asynchrous Loc Init so as to execute
    init specifically.

    Change-Id: I369e461ca4ca61cea3a9729c84d24af4ffa8e51d
    CRs-fixed: 472843

    Generate position report NMEAs only on final fix

    Position report NMEAs will be generated only
    if the position report is a final fix and not
    an intermediate fix. Blank NMEAs will be sent
    otherwise.

    CRs-fixed: 467575
    Change-Id: I60e63faf3e4503f5a6ce93211d4017aa7695b78b

    Return the correct value from loc_eng_init

    The function was returning an error code
    which was causing GPSLocationProvider to
    fail initialization

    CRs-fixed: 501318
    Change-Id: Icec707c3b9edc60bd07914b130077f9a96c5e794

    gps.conf: Removed the option 

--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -42,12 +42,7 @@ SUPL_VER=0x10000
 # ON_DEMAND_TIME = 0x10
 # ULP = 0x20
 # default = MSA | MSB | SCHEDULING | ULP | ON_DEMAND_TIME
-#ifndef VENDOR_EDIT
-#//DuYuanHua@OnLineRD.AirService.GPS, 2012/10/19, Modify for Disable ULP
-#CAPABILITIES=0x37
-#else /* VENDOR_EDIT */
-CAPABILITIES=0x37
-#endif /* VENDOR_EDIT */
+CAPABILITIES=0x17
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -79,3 +74,11 @@ LPP_PROFILE = 0
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
 NMEA_PROVIDER=0
+
+##################################################
+# Select Positioning Protocol on A-GLONASS system
+##################################################
+# 0x1: RRC CPlane
+# 0x2: RRLP UPlane
+# 0x4: LLP Uplane
+A_GLONASS_POS_PROTOCOL_SELECT = 0
