--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -40,9 +40,9 @@ SUPL_VER=0x10000
 # MSB = 2
 # MSA = 4
 # ON_DEMAND_TIME = 0x10
-# ULP = 0x20
+# GEOFENCE = 0x20
 # default = MSA | MSB | SCHEDULING | ULP | ON_DEMAND_TIME
-CAPABILITIES=0x17
+CAPABILITIES=0x36
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
