--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -238,6 +238,9 @@ on post-fs-data
     chown root system /proc/touchpanel/music_enable
     chmod 0660 /proc/touchpanel/music_enable
 
+    chown system system /sys/devices/virtual/graphics/fb0/cabc
+    chown system system /sys/devices/virtual/graphics/fb0/sre
+
     setprop vold.post_fs_data_done 1
 
 # Export GPIO56 for fusion targets to enable/disable hub
