--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -241,6 +241,8 @@ on post-fs-data
     chown system system /sys/devices/virtual/graphics/fb0/cabc
     chown system system /sys/devices/virtual/graphics/fb0/sre
 
+    mkdir /data/mpdecision 0660 system system
+
     setprop vold.post_fs_data_done 1
 
 # Export GPIO56 for fusion targets to enable/disable hub
