n1: WiFi MAC loader and init cleanup
 * WiFi MAC address is currently not being properly configured.
 * We need to read this from the appropriate item in opponvitems.
 * Add a modified conn_init (from Nexus) to handle this, and update
   all configuration.
 * Cleanup useless scripts and improve startup speed.

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -157,6 +157,12 @@ service time_daemon /system/bin/time_daemon
    user root
    group root
 
+service wcnss-init /system/bin/sh /system/etc/init.qcom.wifi.sh
+    class late_start
+    user system
+    group system wifi
+    oneshot
+
 service wcnss-service /system/bin/wcnss_service
     class late_start
     user system
