--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -172,6 +172,8 @@ on charger
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/devices/platform/gpio-keys/disabled_keys 102,114-115,139,158
+    write /sys/class/leds/button-backlight 0
 
 on post-fs
     # Increase readahead
