n1: Fix WiFi on initial boot
 * Remove the code that waits on NV items to be ready for starting
   WCNSS. We will just start it with a random MAC and fill it in
   later.

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -104,16 +104,14 @@ service time_daemon /system/bin/time_daemon
    group root
 
 service wcnss-init /system/bin/sh /system/etc/init.qcom.wifi.sh
-    class late_start
-    user system
-    group system wifi
+    class main
+    user root
     oneshot
-    disabled
 
 service wcnss-service /system/bin/wcnss_service
-    class late_start
     user system
     group system wifi
+    disabled
     oneshot
 
 # CM Performance Profiles
