--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -195,7 +195,7 @@ on post-fs-data
     chown dhcp dhcp /data/misc/dhcp
 
     chown system system /dev/wcnss_wlan
-    write 1 /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr
+    write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
 
     # to observe dnsmasq.leases file for dhcp information of soft ap.
     chown dhcp system /data/misc/dhcp
