--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -191,6 +191,10 @@ RoamRssiDiff=3
 # NOTE: Value of 0 means that we would register for reassoc threshold.
 gImmediateRoamRssiDiff=10
 
+# To enable, set gRoamIntraBand=1 (Roaming within band)
+# To disable, set gRoamIntraBand=0 (Roaming across band)
+gRoamIntraBand=0
+
 # SAP Country code
 
 # Default Country Code is 2 bytes, 3rd byte is optional indoor or out door.
@@ -386,6 +390,22 @@ isAndroidPsEn=0
 
 #disable LDPC in STA mode if the AP is TXBF capable
 gDisableLDPCWithTxbfAP=1
+
+#Enable thermal mitigation
+gThermalMitigationEnable=1
+
+#List of Country codes for which 11ac needs to be disabled
+#Each country code must be delimited by comma(,)
+gListOfNon11acCountryCode=RU,UA,ZA
+
+#Maxium Channel time in msec
+gMaxMediumTime = 6000
+
+# 802.11K support
+gRrmEnable=1
+gRrmOperChanMax=8
+gRrmNonOperChanMax=8
+gRrmRandIntvl=100
 END
 
 # Note: Configuration parser would not read anything past the END marker
