n1: Updates for KitKat

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -74,6 +74,11 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 #    user system
 #    group gps qcom_oncrpc net_raw
 
+# usb-otg storage
+service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/usbdisk /storage/usbdisk
+   class late_start
+   disabled
+
 service thermald /system/bin/thermald
    class main
    user root
