n1: Update Prima firmware

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -19,12 +19,6 @@ gImpsModSleepTime=0
 
 # Enable BMPS or not
 gEnableBmps=1
-#Telescopic Beacon skipping
-gTelescopicBeaconWakeupEn=1
-telescopicBeaconTransListenInterval=3
-telescopicBeaconTransListenIntervalNumIdleBcns=1
-telescopicBeaconMaxListenInterval=3
-telescopicBeaconMaxListenIntervalNumIdleBcns=1
 
 # Enable suspend or not
 
@@ -99,15 +93,16 @@ McastBcastFilter=3
 hostArpOffload=1
 
 
+#Flag to enable HostNSOffload feature or not
+
+hostNSOffload=0
+
 #SoftAP Related Parameters
 
 # AP MAc addr
 
 gAPMacAddr=000AF589dcab
 
-#liuhd add for softap suspend
-gEnableTrafficMonitor=1 
-gTrafficIdleTimeout=3000
 
 # 802.11n Protection flag
 
@@ -156,7 +151,7 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=0
+g11dSupportEnabled=1
 
 # 802.11h support
 
@@ -362,12 +357,6 @@ gVhtTxMCS=2
 # gPassiveMinChannelTime=60
 # gActiveMaxChannelTime=40
 # gActiveMinChannelTime=20
-gPassiveMaxChannelTimeConc=110
-gPassiveMinChannelTimeConc=60
-gActiveMaxChannelTimeConc=27
-gActiveMinChannelTimeConc=20
-gRestTimeConc=100
-gNumChanCombinedConc=1
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
@@ -406,6 +395,7 @@ gRrmEnable=1
 gRrmOperChanMax=8
 gRrmNonOperChanMax=8
 gRrmRandIntvl=100
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
