--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -31,6 +31,7 @@ on early-init
     mkdir /firmware 0771 system system
     symlink /data/tombstones /tombstones
     mount debugfs debugfs /sys/kernel/debug
+    chown system system /sys/kernel/debug/kgsl/proc
 
 on init
     export BOOTCLASSPATH ${BOOTCLASSPATH}:/system/framework/qcnvitems.jar:/system/framework/qcrilhook.jar
@@ -79,18 +80,19 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw
    class late_start
    disabled
 
+# internal sdcard
+service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0 /storage/sdcard0
+   class late_start
+   disabled
+
 service thermald /system/bin/thermald
    class main
-   user root
-   group root
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
    class main
-   user root
-   disabled
 
-service kickstart /system/bin/qcks -i /firmware/image/
-   class main
+service kickstart /system/bin/qcks -i /firmware/image/ -r /data/tombstones/mdm/
+   class core
    oneshot
 
 service qrngd /system/bin/qrngd -f
