n1: Update for new QC stack
 * Remove GPS source- we will reference the blob on the OSS side as the
   dependency chain is significantly more complex.
 * Remove workarounds for old drivers
 * Update for CSD

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -65,15 +65,15 @@ on post-fs-data
 
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-        class late_start
-        user camera
-        group camera system inet input graphics net_bt_stack
+    class late_start
+    user camera
+    group camera system inet input graphics net_bt_stack
 
 #start GNSS/Sensor interface daemon
-#service gsiff_daemon /system/bin/gsiff_daemon
-#    class late_start
-#    user system
-#    group gps qcom_oncrpc net_raw
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group gps qcom_oncrpc net_raw
 
 # usb-otg storage
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk /storage/usbdisk
