n1: No need to shit up the rootfs

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -559,7 +559,7 @@ service hcidump /system/bin/sh /system/etc/hcidump.sh
     disabled
     oneshot
 
-service charger /charger_n1
+service charger /sbin/charger_n1
     class charger
 
 service ssr_diag /system/bin/ssr_diag
